--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile('org.springframework.session:spring-session-jdbc')
 
     testCompile "org.projectlombok:lombok"
+    testCompile("org.springframework.security:spring-security-test")
     annotationProcessor('org.projectlombok:lombok')
     testAnnotationProcessor('org.projectlombok:lombok')
     testCompile('org.springframework.boot:spring-boot-starter-test')
