--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,13 @@ script: './gradlew clean build'
 
 before_deploy:
   - zip -r susu-flower *
-  - mkdir -p deploy
-  - mv susu-flower.zip deploy/susu-flower.zip
+  - mkdir -p before-deploy
+  - cp scripts/*.sh before-deploy/
+  - cp appspec.yml before-deploy/
+  - cp build/libs/*.jar before-deploy/
+  - cd before-deploy && zip -r before-deploy *
+  - cd ../ && mkdir -p deploy
+  - mv before-deploy/before-deploy.zip deploy/susu-flower.zip
 
 deploy:
   - provider: s3
